[package]
authors = ["FeÌlix Saparelli <felix@passcod.name>"]
name = "omelette"
version = "0.1.0"

[dependencies]
chrono = "0.4.6"
clap = "2.32.0"
dotenv = "0.9.0"
egg-mode-text = "1.14.7"
log = "0.4.6"
tokio = "0.1.13"

[dependencies.diesel]
features = ["chrono", "postgres"]
version = "1.3.3"

[dependencies.diesel-derive-enum]
features = ["postgres"]
version = "0.4.4"

[dependencies.egg-mode]
git = "https://github.com/QuietMisdreavus/twitter-rs"
