[package]
authors = ["FeÌlix Saparelli <felix@passcod.name>"]
edition = "2018"
name = "omelette"
version = "0.1.0"

[dependencies]
blobstore = "0.1.1"
chrono = "0.4.6"
dotenv = "0.9.0"
egg-mode-text = "1.14.7"
reqwest = "0.9.5"
structopt = "0.2.14"
tokio = "0.1.13"

[dependencies.diesel]
features = ["chrono", "postgres"]
version = "1.3.3"

[dependencies.diesel-derive-enum]
features = ["postgres"]
version = "0.4.4"

[dependencies.diesel_migrations]
features = ["postgres"]
version = "1.3.0"

[dependencies.egg-mode]
git = "https://github.com/QuietMisdreavus/twitter-rs"

[target.'cfg(target_env="musl")'.dependencies.openssl]
features = ["vendored"]
version = "0.10.11"
