[package]
authors = ["FeÌlix Saparelli <felix@passcod.name>"]
edition = "2018"
name = "omelette"
version = "1.2.0"

[badges]
travis-ci = { repository = "passcod/omelette" }
maintenance = { status = "actively-developed" }

[dependencies]
blobstore = "0.1.1"
chrono = "0.4.6"
csv = "1.0.5"
dotenv = "0.9.0"
egg-mode-text = "1.14.7"
futures = "0.1.27"
regex = "1.1.0"
reqwest = "0.9.5"
structopt = "0.2.14"
tokio = "0.1.13"
tree_magic = "0.2.1"
zip = "0.5.0"

[dependencies.diesel]
features = ["chrono", "postgres"]
version = "1.3.3"

[dependencies.diesel-derive-enum]
features = ["postgres"]
version = "0.4.4"

[dependencies.diesel_migrations]
features = ["postgres"]
version = "1.3.0"

[dependencies.egg-mode]
git = "https://github.com/passcod/twitter-rs"

[target.'cfg(target_env="musl")'.dependencies.openssl]
features = ["vendored"]
version = "0.10.11"
